--- a/frontend/staff-dashboard/src/styles/antd.less
+++ b/frontend/staff-dashboard/src/styles/antd.less
@@ -6,3 +6,13 @@
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
 @primary-color: #A31F34;
+
+.income-usd {
+  max-width: 100px;
+  overflow-x: scroll;
+  height: 35px;
+
+  span {
+    white-space: nowrap;
+  }
+}
