--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -15,8 +15,10 @@
                 <h1>{{ page.title }}</h1>
                 {# Description field contents are already rendered wrapped in a <p> tag #}
                 {{ page.description | richtext }}
+                {% if page.course %}
                 <input id="courseId" type="hidden" value="{{page.course.readable_id}}" />
                 <div id="productDetailEnrollment"></div>
+                {% endif %}
               </div>
             </div>
             <div class="content-col hero-media">
