Online-839 Improve Financial Assistance Request List View (#845)
* Online-839 Improve Financial Assistance Request List View

* Online-839 Fix style issues

--- a/frontend/staff-dashboard/src/styles/antd.less
+++ b/frontend/staff-dashboard/src/styles/antd.less
@@ -8,11 +8,7 @@
 @primary-color: #A31F34;
 
 .income-usd {
-  max-width: 100px;
-  overflow-x: scroll;
-  height: 35px;
-
-  span {
-    white-space: nowrap;
-  }
+  max-width: 150px;
+  overflow-y: auto;
+  max-height: 100px;
 }
