--- a/cms/templates/flexiblepricing/flexible_pricing_request_form.html
+++ b/cms/templates/flexiblepricing/flexible_pricing_request_form.html
@@ -51,12 +51,21 @@
       </div>
     {% else %}
       {% if prior_request.is_approved %}{# request status #}
+        {% if prior_request.tier.discount.amount == 0 %}{# discount amount text #}
+        <div class="flexible-pricing-head">
+          {{ page.application_approved_no_discount_text|richtext }}
+        </div>
+        <a href="/" class="btn btn-primary btn-gradient-red flexible-price-certificate-btn">
+          Get certificate
+        </a>
+        {% else %}
         <div class="flexible-pricing-head">
           {{ page.application_approved_text|richtext }}
         </div>
         <a href="/" class="btn btn-primary btn-gradient-red flexible-price-certificate-btn">
           Get certificate at reduced rate
         </a>
+        {% endif %}{# end discount amount text #}
       {% elif prior_request.is_denied %}
         <div class="flexible-pricing-head">
           {{ page.application_denied_text|richtext }}
