--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -101,6 +101,13 @@ $program-badge-bg: #DBF2F3;
     }
   }
 
+  .upgrade-item-description {
+    background-color: #F6F6F6;
+    padding: 15px;
+    height: 100%;
+    width: 100%;
+  }
+
   .enrollment-extra-links {
     margin-top: .5rem;
     font-size: smaller;
