Certificate learner view

--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -108,7 +108,7 @@ $program-badge-bg: #DBF2F3;
     a {
       text-decoration: underline;
       color: $light-gray;
-      margin: auto 0;
+      margin: auto 2px;
     }
 
     form button.btn-primary {
