--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,4 +1,5 @@
 {% load static hijack_tags js_interop %}
+{% load wagtailcore_tags startswith %}
 {% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html lang="en">
@@ -31,10 +32,12 @@
     <a href="#main" class="sr-only sr-only-focusable">Skip to main content</a>
     {% include "partials/gtm_body.html" %}
     {% hijack_notification %}
+    {% if not request.path|startswith:'/ecommerce/bulk/,/certificate/' %}
     {% block headercontent %}
       <div id="header"></div>
       {% render_bundle 'header' %}
     {% endblock %}
+    {% endif %}
     {% block content %}
         {% block banner %}
         {% endblock %}
