--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -32,7 +32,7 @@
     <a href="#main" class="sr-only sr-only-focusable">Skip to main content</a>
     {% include "partials/gtm_body.html" %}
     {% hijack_notification %}
-    {% if not request.path|startswith:'/ecommerce/bulk/,/certificate/' %}
+    {% if not request.path|startswith:'/certificate/' %}
     {% block headercontent %}
       <div id="header"></div>
       {% render_bundle 'header' %}
