Learner and anonymous certificate view- issue #692 #693 (#892)
* Certificate learner view

* fixed certificate slug issues

* fixed failing tests

* requested changes

* remove header on certificate view

* minor fix

--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -111,6 +111,10 @@ $program-badge-bg: #DBF2F3;
       margin: auto 0;
     }
 
+    a.view-certificate {
+      margin: auto 5px;
+    }
+
     form button.btn-primary {
       font-size: 14px;
       padding: 9px 18px;
