Fixes nav issues with a course date is selected

--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -242,6 +242,7 @@
         .dates-tooltip {
           color: $link-blue !important;
           text-decoration: underline;
+          cursor: pointer;
         }
       }
 
@@ -456,4 +457,10 @@
 .popover-header {
   text-align: center;
   background: $white;
+}
+
+.date-link {
+  color: $link-blue !important;
+  text-decoration: underline;
+  cursor: pointer;
 }
