--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -48,7 +48,7 @@
               </div>
               {% if course_runs|length > 1 %}
                 <strong class="more-dates">
-                  <a tabindex="0" role="button" class="dates-tooltip" id="datesPopover" data-trigger="focus" href="#" onClick="event.preventDefault();"
+                  <span tabindex="0" role="button" class="dates-tooltip" id="datesPopover" data-trigger="focus" onClick="event.preventDefault();"
                     data-toggle="popover" data-placement="auto" title="More dates available" data-html="true"
                     data-content="
                       <div>
@@ -56,12 +56,12 @@
                       </div>
                       {% for course_run in course_runs %}
                           <div>
-                            <a class='date-link' id='{{ course_run.courseware_id }}' href='#' onClick='event.preventDefault();'>Start Date {{ course_run.start_date|date:'F j, Y' }}</a>
+                            <span class='date-link' id='{{ course_run.courseware_id }}' onClick='event.preventDefault();'>Start Date {{ course_run.start_date|date:'F j, Y' }}</span>
                           </div>
                       {% endfor %}
                     ">
                     More Dates
-                  </a>
+                  </span>
                 </strong>
               {% endif %}
             </div>
