updated color contrast on dashboard

--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -86,12 +86,12 @@ $program-badge-bg: #DBF2F3;
       margin-right: .5rem;
     }
     span.badge.badge-red {
-        color: $red;
+        color: $red-darker;
         background-color: #FAE8E8;
       }
 
     span.badge.badge-green {
-        color: $green;
+        color: $green-darker;
         background-color: #DBF3E9;
       }
 
