--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -6,9 +6,11 @@ $primary: #a31f34;
 $gray: #363636;
 $gray-85: #d9d9d9;
 $gray-darker: #c2c2c2;
+$green-darker: #3E775D;
+$red-darker: #B43E3E;
 $success: #28977e;
 
-$light-gray: #8a8b8c;
+$light-gray: #666666;
 $very-light-gray: #f5f5f5;
 $soft-light-gray: #d8d8d8;
 $white-smoke: #f1f1f1;
