--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -13,7 +13,6 @@ $program-badge-bg: #DBF2F3;
 .enrolled-items {
   .card {
     display: flex;
-    flex-direction: row;
 
     &.no-enrollments {
       flex-direction: column;
@@ -29,7 +28,9 @@ $program-badge-bg: #DBF2F3;
     }
 
     h2 a {
+      font-size: 20px;
       text-decoration: underline;
+      color: black;
     }
 
     @include media-breakpoint-up(md) {
@@ -105,6 +106,8 @@ $program-badge-bg: #DBF2F3;
     background-color: #F6F6F6;
     padding: 15px;
     width: 100%;
+    flex-direction: row;
+    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.24), inset -1px 0 0 0 rgba(0,0,0,0.07), inset 1px 0 0 0 rgba(0,0,0,0.07);
   }
 
   .enrollment-extra-links {
