Code review comments

--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -27,8 +27,11 @@ $program-badge-bg: #DBF2F3;
       }
     }
 
-    h2 a {
+    h2 {
       font-size: 20px;
+    }
+
+    h2 a {
       color: black;
     }
 
