--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -13,6 +13,7 @@ $program-badge-bg: #DBF2F3;
 .enrolled-items {
   .card {
     display: flex;
+    flex-direction: row;
 
     &.no-enrollments {
       flex-direction: column;
@@ -27,12 +28,8 @@ $program-badge-bg: #DBF2F3;
       }
     }
 
-    h2 {
-      font-size: 20px;
-    }
-
     h2 a {
-      color: black;
+      text-decoration: underline;
     }
 
     @include media-breakpoint-up(md) {
@@ -89,12 +86,12 @@ $program-badge-bg: #DBF2F3;
       margin-right: .5rem;
     }
     span.badge.badge-red {
-        color: $red-darker;
+        color: $red;
         background-color: #FAE8E8;
       }
 
     span.badge.badge-green {
-        color: $green-darker;
+        color: $green;
         background-color: #DBF3E9;
       }
 
@@ -107,9 +104,8 @@ $program-badge-bg: #DBF2F3;
   .upgrade-item-description {
     background-color: #F6F6F6;
     padding: 15px;
+    height: 100%;
     width: 100%;
-    flex-direction: row;
-    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.24), inset -1px 0 0 0 rgba(0,0,0,0.07), inset 1px 0 0 0 rgba(0,0,0,0.07);
   }
 
   .enrollment-extra-links {
@@ -155,7 +151,6 @@ $program-badge-bg: #DBF2F3;
 
 .dashboard h1 {
   margin-bottom: 38px;
-  font-size: 32px;
 
   @include media-breakpoint-down(md) {
     margin-bottom: 30px;
@@ -177,17 +172,10 @@ $program-badge-bg: #DBF2F3;
   transition: right 0.2s ease-in-out ;
   padding: 15px 36px;
   overflow-y: scroll;
-  left: 8px;
-
-  @media only screen and (min-width: 768px) {
-    width: 55%;
-    right: 0;
-    left: unset;
-  }
 
   &.open {
     box-shadow: 0 3px 0 8px rgba(0,0,0,.2);
-    display: block;
+    left: 8px;
   }
 
   button {
@@ -198,10 +186,6 @@ $program-badge-bg: #DBF2F3;
   .row.chrome {
     margin-top: 15px !important;
     margin-bottom: 15px !important;
-  }
-
-  &.closed {
-    display: none;
   }
 }
 
@@ -219,13 +203,4 @@ $program-badge-bg: #DBF2F3;
 
     background-color: rgba(0,0,0,.2);
   }
-}
-
-.box {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-.re-order {
-  order: -2;
 }
