--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -13,7 +13,6 @@ $program-badge-bg: #DBF2F3;
 .enrolled-items {
   .card {
     display: flex;
-    flex-direction: row;
 
     &.no-enrollments {
       flex-direction: column;
@@ -28,8 +27,12 @@ $program-badge-bg: #DBF2F3;
       }
     }
 
+    h2 {
+      font-size: 20px;
+    }
+
     h2 a {
-      text-decoration: underline;
+      color: black;
     }
 
     @include media-breakpoint-up(md) {
@@ -86,12 +89,12 @@ $program-badge-bg: #DBF2F3;
       margin-right: .5rem;
     }
     span.badge.badge-red {
-        color: $red;
+        color: $red-darker;
         background-color: #FAE8E8;
       }
 
     span.badge.badge-green {
-        color: $green;
+        color: $green-darker;
         background-color: #DBF3E9;
       }
 
@@ -104,8 +107,9 @@ $program-badge-bg: #DBF2F3;
   .upgrade-item-description {
     background-color: #F6F6F6;
     padding: 15px;
-    height: 100%;
     width: 100%;
+    flex-direction: row;
+    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.24), inset -1px 0 0 0 rgba(0,0,0,0.07), inset 1px 0 0 0 rgba(0,0,0,0.07);
   }
 
   .enrollment-extra-links {
@@ -151,6 +155,7 @@ $program-badge-bg: #DBF2F3;
 
 .dashboard h1 {
   margin-bottom: 38px;
+  font-size: 32px;
 
   @include media-breakpoint-down(md) {
     margin-bottom: 30px;
@@ -172,10 +177,17 @@ $program-badge-bg: #DBF2F3;
   transition: right 0.2s ease-in-out ;
   padding: 15px 36px;
   overflow-y: scroll;
+  left: 8px;
+
+  @media only screen and (min-width: 768px) {
+    width: 55%;
+    right: 0;
+    left: unset;
+  }
 
   &.open {
     box-shadow: 0 3px 0 8px rgba(0,0,0,.2);
-    left: 8px;
+    display: block;
   }
 
   button {
@@ -186,6 +198,10 @@ $program-badge-bg: #DBF2F3;
   .row.chrome {
     margin-top: 15px !important;
     margin-bottom: 15px !important;
+  }
+
+  &.closed {
+    display: none;
   }
 }
 
@@ -203,4 +219,13 @@ $program-badge-bg: #DBF2F3;
 
     background-color: rgba(0,0,0,.2);
   }
+}
+
+.box {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.re-order {
+  order: -2;
 }
