design tweaks on order/product/dashboard pages

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -83,7 +83,7 @@
             </div>
             {% endif %}
             {% if page.price %}
-            <div class="stat-col small">
+            <div class="stat-col">
               <div class="title">price</div>
               <div class="text">
                 <strong>
