--- a/frontend/public/scss/cart.scss
+++ b/frontend/public/scss/cart.scss
@@ -1,5 +1,8 @@
 .btn-primary.btn-halfsize {
-  padding: 9px 25px;
+  	padding: .35rem 1.5rem;
+	font-size: 14px;
+	line-height: 1.5rem;
+	border: 2px solid #a31f34
 }
 
 .w-33 {
