--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -26,7 +26,7 @@
     <ul class="course-listing card-listing">
       {% for product in products %}
       <li>
-        <div class="course-card highlight-card">
+        <div class="course-card highlight-card clickable">
           <a href="{{ product.url_path }}" class="course-card-link">
             <img src="{% feature_img_src product.feature_image %}" alt="">
             <div class="course-info">
