--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -41,4 +41,4 @@ $subtitle-color: #ff4a68;
 $sirocco: #465a5b;
 $brand-button-bg: #a41e34;
 $brand-lighter-bg: #c5264e;
-$brand-darker-bg: #951328;
+$brand-darker-bg: #a31f34;
