--- a/frontend/public/scss/common.scss
+++ b/frontend/public/scss/common.scss
@@ -135,6 +135,11 @@ a.link-button {
   }
 }
 
+a.btn.disabled {
+  color: grey;
+  border: 2px solid grey;
+}
+
 .btn-gradient-red {
   background: linear-gradient(174deg, $brand-darker-bg, $brand-darker-bg) !important;
   border: 2px solid $brand-darker-bg;
