--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -10,6 +10,12 @@ $sidenav-separator: rgba(255, 255, 255, 0.2);
 $program-badge-fg: #305987;
 $program-badge-bg: #DBF2F3;
 
+$enrolled-verified-fg: #3E775D;
+$enrolled-verified-bg: #DBF3E9;
+
+$enrolled-passed-bg: #3E775D;
+$enrolled-passed-fg: #ffffff;
+
 .enrolled-items {
   .card {
     display: flex;
@@ -29,6 +35,7 @@ $program-badge-bg: #DBF2F3;
 
     h2 {
       font-size: 26px;
+      line-height: 27px;
     }
 
     h2 a {
@@ -75,6 +82,10 @@ $program-badge-bg: #DBF2F3;
         color: $primary;
       }
     }
+
+    strong.active-enrollment-text {
+      color: #139556;
+    }
   }
 
   button.dot-menu {
@@ -93,7 +104,28 @@ $program-badge-bg: #DBF2F3;
       padding: 0.35rem !important;
       margin-bottom: .25rem !important;
       margin-right: .5rem;
+
     }
+    .badge-in-progress {
+      color: black;
+      background-color: transparent;
+      border-color: black;
+      border: 1px;
+      border-radius: 4px;
+      border-style: solid;
+    }
+
+    .badge-enrolled-verified {
+      color: $enrolled-verified-fg;
+      border-color: $enrolled-verified-fg;
+      background-color: $enrolled-verified-bg;
+    }
+
+    .badge-enrolled-passed {
+      color: $enrolled-passed-fg;
+      background-color: $enrolled-passed-bg;
+    }
+
     span.badge.badge-red {
         color: $red-darker;
         background-color: #FAE8E8;
@@ -140,6 +172,7 @@ $program-badge-bg: #DBF2F3;
     form button.btn-primary {
       font-size: 14px;
       padding: 9px 18px;
+      min-width: 145px;
     }
 
     .pricing-links {
