--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -48,15 +48,15 @@
               </div>
               {% if course_runs|length > 1 %}
                 <strong class="more-dates">
-                  <a href="#" role="button" class="dates-tooltip" id="datesPopover" data-trigger="click"
-                    data-toggle="popover" data-placement="auto" title="More dates available" data-html="true"
+                  <span tabindex="0" role="button" class="dates-tooltip" id="datesPopover" data-trigger="click" onkeydown="{ $('span.dates-tooltip').popover('show'); event.preventDefault(); }" onClick="{ $('span.dates-tooltip').popover('show'); event.preventDefault(); }" 
+                  data-toggle="popover" data-placement="auto" title="More dates available" data-html="true"
                     data-content="
                       <div>
                         <p>Click below to enroll in one of these dates</p>
                       </div>
                       {% for course_run in course_runs %}
                           <div>
-                            <button class='date-link' id='{{ course_run.courseware_id }}' onClick='event.preventDefault();'>Start Date {{ course_run.start_date|date:'F j, Y' }}</button>
+                            <span role='button' taborder='0' class='date-link' id='{{ course_run.courseware_id }}' onClick='event.preventDefault();'>Start Date {{ course_run.start_date|date:'F j, Y' }}</span>
                           </div>
                       {% endfor %}
                     ">
