--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -242,7 +242,8 @@
         .dates-tooltip {
           color: $link-blue !important;
           text-decoration: underline;
-          cursor: pointer;
+          background-color: transparent;
+          border: none;
         }
       }
 
@@ -478,5 +479,6 @@
 .date-link {
   color: $link-blue !important;
   text-decoration: underline;
-  cursor: pointer;
+  background-color: transparent;
+  border: none;
 }
