Fix: make More Dates button bolder

--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -240,6 +240,7 @@
         font-size: 12px;
 
         .dates-tooltip {
+          font-weight: bolder;
           color: $link-blue !important;
           text-decoration: underline;
           background-color: transparent;
