1207 accessibility more dates popup on course pages lacks keyboard controls (#1230)
* Fix: hold for testing later

* jame's test

* Fix: handle tabbing into popover

This allows a user to press tab and the enter button in order to access the more dates options on a product page.

* Fix: Format

* Fix: make More Dates button bolder

--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -240,9 +240,11 @@
         font-size: 12px;
 
         .dates-tooltip {
+          font-weight: bolder;
           color: $link-blue !important;
           text-decoration: underline;
-          cursor: pointer;
+          background-color: transparent;
+          border: none;
         }
       }
 
@@ -478,5 +480,6 @@
 .date-link {
   color: $link-blue !important;
   text-decoration: underline;
-  cursor: pointer;
+  background-color: transparent;
+  border: none;
 }
