Adds program record functionality

--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -25,6 +25,7 @@
 @import "cart";
 @import "receipt";
 @import "certificates/certificate";
+@import "learner-records";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
