--- a/cms/templates/certificate_page.html
+++ b/cms/templates/certificate_page.html
@@ -73,14 +73,13 @@
                     {% endif %}
                     <span class="award-text">
                         {% if page.CEUs %} Awarded {{ CEUs }} Continuing Education Units (CEUs) <br> {% endif %}
-                        
                         {{ start_date|date }} - {{ end_date|date }}
                     </span>
                     <div class="row justify-content-center certify-by-row">
                         {% for signatory in page.signatory_pages %}
                             <div class="col-sm-4 col-24 certify-by">
                                 <div class="signature-area">
-                                    {% image signatory.signature_image max-150x50 %}
+                                    {% image signatory.signature_image max-150x50 alt="" %}
                                 </div>
                                 <span class="title">{{ signatory.name }}</span>
                                 {% if signatory.title_1 %}
@@ -119,7 +118,9 @@
                     <li><a href="/terms-of-service/">Terms of Services</a></li>
                     <li><a href="/privacy-policy/">Privacy Policy</a></li>
                 </ul>
-                <span class="copyright">&copy; <a href="/">MIT Office of Digital Learning</a> <br>All rights reserved except where noted.</span>
+                {% block copyright %}
+                    {% include "copyright.html" %}
+                {% endblock %}
             </div>
         </div>
     </div>
