--- a/frontend/public/scss/common.scss
+++ b/frontend/public/scss/common.scss
@@ -94,13 +94,14 @@ a.link-button {
   font-size: 18px;
   padding: 11px 40px;
   border-radius: 4px;
+  border-width: 1px;
   transition: .25s !important;
   font-weight: 600;
   background-color: $brand-button-bg;
 
   &:hover {
-      opacity: 1;
-      border: 1px solid $brand-darker-bg;
+    opacity: 1;
+    border: 1px solid $brand-darker-bg;
 	  color: $brand-darker-bg;
 	  background: linear-gradient(174deg, $tile-background, $tile-background) !important;
   }
@@ -142,7 +143,7 @@ a.btn.disabled {
 
 .btn-gradient-red {
   background: linear-gradient(174deg, $brand-darker-bg, $brand-darker-bg) !important;
-  border: 2px solid $brand-darker-bg;
+  border: 1px solid $brand-darker-bg;
 }
 
 .btn-denim-blue {
