--- a/frontend/public/scss/learner-records.scss
+++ b/frontend/public/scss/learner-records.scss
@@ -44,7 +44,7 @@ div.learner-record {
 
 table.learner-record-table {
   margin-top: .5em;
-  width: 100vw;
+  width: 100%;
 
   tr:first-child {
     width: 45%;
@@ -66,10 +66,12 @@ div.learner-record-sharing-controls {
     font-weight: 400;
     box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
     border: none;
-    line-height: 35px;
     text-align: center;
     border-radius: 0.25rem;
     font-size: 15px;
+    @media (min-width:960px) { 
+      line-height: 35px;
+    }
   }
 
   button:not(:first-child) {
