--- a/frontend/public/scss/user-menu.scss
+++ b/frontend/public/scss/user-menu.scss
@@ -36,14 +36,18 @@
     .dropdown-toggle::after {
       border-color: $primary;
       transform: rotate(45deg);
-      margin-top: 5px;
+      margin-top: 1px;
     }
   }
 
   .dropdown-toggle {
-    max-width: 100%;
+    max-width: 40ch;
     padding: 0px;
     font-weight: 600;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    position: relative;
+    padding-right: 20px;
 
     &:after {
       border: 2px;
@@ -56,6 +60,9 @@
       margin-top: -5px;
       display: inline-block;
       vertical-align: middle;
+      position: absolute;
+      right: 2px;
+      top: 10px;
     }
 
     &:hover {
