Extended the social auth OIDC class with OdlOpenIdConnectAuth class.  Got rid of the keycloak uuid which was added to the user model.  Created a new method  for creating the user in the authentication pipeline

--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -9,7 +9,7 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
   </form>
-  <a href="{% url 'social:begin' 'oidc' %}?next={{ request.path }}">Login with SSO</a>
+  <a href="{% url 'social:begin' 'odl-oidc' %}?next={{ request.path }}">Login with SSO</a>
   <br>
 </div>
 {% endblock %}
