--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,5 +1,5 @@
 {% load static hijack_tags js_interop %}
-{% load wagtailcore_tags startswith %}
+{% load wagtailcore_tags startswith noindex_meta %}
 {% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html lang="en">
@@ -18,6 +18,7 @@
       media="none" onload="if(media!='all') media='all'">
     {% js_settings %}
     {% render_bundle 'style' %}
+    {% noindex_meta %}
     <title>{% block title %}{% endblock %}</title>
     <meta name="google-site-verification" content="{{ domain_verification_tag }}" />
     <meta name="description" content="{% block description %}{% endblock %}">
