--- a/cms/templates/flexiblepricing/flexible_pricing_request_form.html
+++ b/cms/templates/flexiblepricing/flexible_pricing_request_form.html
@@ -16,7 +16,7 @@
         <div class="auth-card card-shadow auth-form flexible-pricing-form">
           <div class="auth-header">
             <h4 class="tell-us-about-your-income">Tell us about your income</h4>
-            <form action="{% pageurl page %}" method="POST">
+            <form method="POST">
               {% csrf_token %}
               <div class="form-group">
                 <label for="your_income" id="your_income_label">Yearly Income{%if form.fields.your_income.required %}<span class="required">*</span>{% endif %}</label>
