Removing unnecessary alt texts from images

--- a/cms/templates/certificate_page.html
+++ b/cms/templates/certificate_page.html
@@ -62,7 +62,7 @@
                     </div>
                     <span class="institute-text">Massachusetts Institute of Technology</span>
                     <div class="institute-logo">
-                        <img src="{% static 'images/certificates/certificate-logo.png' %}" alt="MIT">
+                        <img src="{% static 'images/certificates/certificate-logo.png' %}" alt="">
                     </div>
                     <span class="certify-text">This is to certify that</span>
                     <span class="certify-name">{{ learner_name }}</span>
