Order History table makeover

--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -26,6 +26,7 @@
 @import "receipt";
 @import "certificates/certificate";
 @import "learner-records";
+@import "order-history";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
