--- a/frontend/public/scss/user-menu.scss
+++ b/frontend/public/scss/user-menu.scss
@@ -29,14 +29,13 @@
   @include media-breakpoint-down(sm) {
     display: none;
   }
-
-  &.show {
-    color: $primary;
-
-    .dropdown-toggle::after {
-      border-color: $primary;
-      transform: rotate(45deg);
-      margin-top: 1px;
+  .dropdown-toggle.user-menu-button {
+    &.show {
+      &:after {
+        border-color: $primary;
+        transform: rotate(45deg);
+        margin-top: 1px;
+      }
     }
   }
 
@@ -44,7 +43,6 @@
     max-width: 40ch;
     padding: 0px;
     font-weight: 600;
-    overflow: hidden;
     text-overflow: ellipsis;
     position: relative;
     padding-right: 20px;
