--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -30,7 +30,7 @@
   </head>
   <body class="{% block bodyclass %}{% endblock %}">
   <div class="main-panel">
-    <a href="#main" class="sr-only sr-only-focusable">Skip to main content</a>
+    <a href="#main" class="visually-hidden visually-hidden-focusable">Skip to main content</a>
     {% include "partials/gtm_body.html" %}
     {% hijack_notification %}
     {% if not request.path|startswith:'/certificate/' %}
