Fix padding and button formatting
Fixes padding issues on upsell message on the enrolled item cards shown on the dashboard.  Also fixes the close button formatting on the program drawer.

--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -275,6 +275,8 @@ $enrolled-passed-fg: #ffffff;
       float: none !important;
       width: 24px;
       height: 24px;
+      background-color: transparent;
+      border-width: 0;
 
       span {
         background-image: url('/static/images/close-drawer.png');
