Converts font weight for bootstrap 5
Also remove underline from the Title link in the course cards

--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -58,6 +58,12 @@ $enrolled-passed-fg: #ffffff;
         text-decoration: underline;
       }
     }
+    h5 a {
+      text-decoration: none;
+      &:hover{
+        text-decoration: underline;
+      }
+    }
 
     @include media-breakpoint-up(md) {
       .row {
