Sets the close button to white for alerts

--- a/frontend/public/scss/notification.scss
+++ b/frontend/public/scss/notification.scss
@@ -17,20 +17,7 @@
     &.alert-info, &.alert-danger, &.alert-success {
       color: white;
 
-      a.alert-link, .close {
-        color: white;
-      }
-
-      a.alert-link {
-        font-weight: inherit;
-        text-decoration: underline;
-
-        &:hover {
-          font-weight: 700;
-        }
-      }
-
-      .close {
+      .btn-close {
         opacity: 1;
       }
     }
