Fixes course about page
Fixes enroll button sizing, which was caused by the removal of xs sizing.  Replaced those references to xs with sm.  Also fixes formatting on the hamburger menu.

--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -23,7 +23,7 @@
   }
 
   .btn-primary.highlight {
-    @include media-breakpoint-down(xs) {
+    @include media-breakpoint-down(sm) {
       display: block;
       width: 100%;
     }
