--- a/frontend/public/scss/auth.scss
+++ b/frontend/public/scss/auth.scss
@@ -2,7 +2,7 @@
   max-width: 650px;
 
   h1 {
-    @include media-breakpoint-down(xs) {
+    @include media-breakpoint-down(sm) {
       font-size: 30px;
     }
 
@@ -19,7 +19,7 @@
   }
 
   h4 {
-    @include media-breakpoint-down(xs) {
+    @include media-breakpoint-down(sm) {
       font-size: 16px;
     }
   }
