--- a/frontend/public/scss/certificates/certificate.scss
+++ b/frontend/public/scss/certificates/certificate.scss
@@ -227,7 +227,7 @@ $blue: #355b6b;
     margin: 30px 0 0 20px;
     position: relative;
 
-    @include media-breakpoint-down(xs) {
+    @include media-breakpoint-down(sm) {
       float: none;
       margin: 0 0 20px;
     }
@@ -278,7 +278,7 @@ $blue: #355b6b;
   padding: 0;
   float: right;
 
-  @include media-breakpoint-down(xs) {
+  @include media-breakpoint-down(sm) {
     float: none;
     margin: 0;
     text-align: center;
@@ -289,7 +289,7 @@ $blue: #355b6b;
     vertical-align: middle;
     margin: 0 0 0 15px;
 
-    @include media-breakpoint-down(xs) {
+    @include media-breakpoint-down(sm) {
       margin: 0 10px 15px;
     }
   }
