715: ecommerce pressing pay jumps back to dashboard without focus on alert (#1537)
* bootstrap updated, much UI broken

* Fixes user menu

* Fixes spacing in forms

* Align form submit buttons correctly

* Fix profile form spacing

* Fix padding and button formatting

Fixes padding issues on upsell message on the enrolled item cards shown on the dashboard.  Also fixes the close button formatting on the program drawer.

* Fix formatting on flexible price form

* Converts font weight for bootstrap 5

Also remove underline from the Title link in the course cards

* Sets the close button to white for alerts

* Move notification component to main from header

* Formatting

* Change reactstrap version

* Chop down flow headaches

* lint

* Fixes course about page

Fixes enroll button sizing, which was caused by the removal of xs sizing.  Replaced those references to xs with sm.  Also fixes formatting on the hamburger menu.

* format

--- a/frontend/public/scss/common.scss
+++ b/frontend/public/scss/common.scss
@@ -277,7 +277,6 @@ button.btn-secondary.unstyled {
 
     a, button.unstyled {
       display: block;
-      width: 100%;
       color: $black;
       font-weight: 400;
       font-size: 14px;
@@ -331,6 +330,11 @@ button.btn-secondary.unstyled {
   max-width: 425px;
   padding: 24px 24px 32px 24px !important;
   border-width: 0 !important;
+
+  .form-group {
+    margin-bottom: 1.5rem;
+    padding-bottom: 0;
+  }
 
   .auth-header {
     .tell-us-about-your-income {
@@ -405,4 +409,18 @@ button.btn-secondary.unstyled {
       }
     }
   }
+}
+
+.form-group {
+  padding-bottom: 1rem;
+
+  label {
+    margin-bottom: 0.5rem;
+  }
+  .form-check-label {
+    margin-bottom: 0;
+  }
+}
+.form-control {
+  padding: .375rem 0.75rem;
 }
