--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -58,6 +58,12 @@ $enrolled-passed-fg: #ffffff;
         text-decoration: underline;
       }
     }
+    h5 a {
+      text-decoration: none;
+      &:hover{
+        text-decoration: underline;
+      }
+    }
 
     @include media-breakpoint-up(md) {
       .row {
@@ -275,6 +281,8 @@ $enrolled-passed-fg: #ffffff;
       float: none !important;
       width: 24px;
       height: 24px;
+      background-color: transparent;
+      border-width: 0;
 
       span {
         background-image: url('/static/images/close-drawer.png');
