Update badges to bootstrap v5

--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -360,7 +360,7 @@
           padding: 0.35rem !important;
         }
 
-        span.badge-danger {
+        span.bg-danger {
           background-color: #fae8e8;
           color: #b43e3e;
         }
