--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -3,18 +3,110 @@
 }
 #course-catalog-navigation {
     display: flex;
-}
-#catalog-page-item-count {
-    color: var(--blue-dark, #03152D);
-    text-align: right;
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-right: 64px;
-    margin-left: auto;
-    margin-top: 40px;
+
+    #tab-count-row {
+        display: flex;
+        width: 100%;
+
+        #catalog-page-item-count {
+            color: var(--blue-dark, #03152D);
+            text-align: right;
+            font-family: Inter;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            margin-right: 64px;
+            margin-left: auto;
+            margin-top: 40px;
+        }
+
+        #tabs {
+            display: inline-flex;
+            align-items: flex-start;
+            gap: 20px;
+            padding-left: 24px;
+            padding-top: 30px;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+        
+            .selected-tab {
+                display: flex;
+                padding: 10px;
+                align-items: flex-start;
+                border-bottom: 2px solid #A31F34;
+                color: var(--blue-dark, #03152D);
+                -webkit-transition-timing-function: ease-out;
+                -webkit-transition: 300ms;
+                transition-timing-function: ease-out;
+                transition: 300ms;
+            }
+            
+            .unselected-tab {
+                display: flex;
+                padding: 10px;
+                align-items: flex-start;
+                color: var(--grey-secoundary, #8A8B8C);
+                -webkit-transition-timing-function: ease-out;
+                -webkit-transition: 300ms;
+                transition-timing-function: ease-out;
+                transition: 300ms;
+            }
+        
+            button {
+                background: none;
+                border: none;
+                padding: 0;
+                font: inherit;
+                color: inherit;
+                cursor: pointer;
+                outline: inherit;
+            }
+        }
+    }
+
+    #department-sidebar {
+        width: 312px;
+        padding: 15px;
+        margin-top: 30px;
+        margin-left: 60px;
+        align-items: flex-start;
+        border-radius: 5px;
+        background: #FFF;
+    
+        /* Dropshadow */
+        box-shadow: 0px 2px 3px 0px rgba(18, 38, 49, 0.15);
+    
+        #department-sidebar-link-list {
+            padding-left: 0;
+        }
+    
+        .department-selected-link {
+            display: flex;
+            padding: 15px;
+            flex-direction: column;
+            gap: 10px;
+            align-self: stretch;
+            border-radius: 5px;
+            background: var(--red, #A31F34);
+            color: #FFF;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+        }
+    
+        .department-link {
+            display: flex;
+            padding: 15px;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 10px;
+            align-self: stretch;
+        }
+    }
 }
 #catalog-title {
     display: flex;
@@ -39,92 +131,6 @@
         flex: 1 0 0;
         align-self: stretch;
         margin-bottom: 0;
-    }
-}
-
-#department-sidebar {
-    width: 312px;
-    padding: 15px;
-    margin-top: 30px;
-    margin-left: 60px;
-    align-items: flex-start;
-    border-radius: 5px;
-    background: #FFF;
-
-    /* Dropshadow */
-    box-shadow: 0px 2px 3px 0px rgba(18, 38, 49, 0.15);
-
-    #department-sidebar-link-list {
-        padding-left: 0;
-    }
-
-    .department-selected-link {
-        display: flex;
-        padding: 15px;
-        flex-direction: column;
-        gap: 10px;
-        align-self: stretch;
-        border-radius: 5px;
-        background: var(--red, #A31F34);
-        color: #FFF;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-    }
-
-    .department-link {
-        display: flex;
-        padding: 15px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 10px;
-        align-self: stretch;
-    }
-}
-
-#tabs {
-    display: inline-flex;
-    align-items: flex-start;
-    gap: 20px;
-    padding-left: 24px;
-    padding-top: 30px;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-
-    .selected-tab {
-        display: flex;
-        padding: 10px;
-        align-items: flex-start;
-        border-bottom: 2px solid #A31F34;
-        color: var(--blue-dark, #03152D);
-        -webkit-transition-timing-function: ease-out;
-        -webkit-transition: 300ms;
-        transition-timing-function: ease-out;
-        transition: 300ms;
-    }
-    
-    .unselected-tab {
-        display: flex;
-        padding: 10px;
-        align-items: flex-start;
-        color: var(--grey-secoundary, #8A8B8C);
-        -webkit-transition-timing-function: ease-out;
-        -webkit-transition: 300ms;
-        transition-timing-function: ease-out;
-        transition: 300ms;
-    }
-
-    button {
-        background: none;
-        border: none;
-        padding: 0;
-        font: inherit;
-        color: inherit;
-        cursor: pointer;
-        outline: inherit;
     }
 }
 #catalog-grid {
